--- a/index.html
+++ b/index.html
@@ -29,6 +29,21 @@
             <img src="images/Mmy-bg.png" alt="">
         </div>
     </section>
+    <section class="dreambig">
+        <div class="document">
+            <img src="images/Mmy-bg2.png" alt="">
+        </div>
+        <div class="document">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics. </p>
+            <a class="hire_me" href="https://www.linkedin.com/in/sagor-chakrabarty-06196523a/" target="_blank">Download
+                Resume</a>
+
+        </div>
+    </section>
 </body>
 
 </html>
